--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
-    "expo": "~51.0.9",
+    "expo": "^51.0.0",
+    "expo-dev-client": "~4.0.17",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.1",
+    "react-native": "^0.74.2",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "^4.10.4",
+    "react-native-safe-area-context": "4.10.1",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
     "styled-components": "^6.1.11"
